Make FLAGSHIP MERCH logo clickable - links to home page with hover effects

--- a/about.html
+++ b/about.html
@@ -11,7 +11,9 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <h2>FLAGSHIP MERCH</h2>
+                <a href="index.html" style="text-decoration: none; color: inherit;">
+                    <h2>FLAGSHIP MERCH</h2>
+                </a>
             </div>
             <ul class="nav-menu">
                 <li class="nav-item">
@@ -156,7 +158,9 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h3>FLAGSHIP MERCH</h3>
+                    <a href="index.html" style="text-decoration: none; color: inherit;">
+                        <h3>FLAGSHIP MERCH</h3>
+                    </a>
                     <p>Premium merchandise for modern brands.</p>
                 </div>
                 <div class="footer-section">
