Update tagline to 'Premium merch for modern brands' throughout website

--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
         <section class="about-hero">
             <div class="container">
                 <h1>About Flagship Merch</h1>
-                <p>We're passionate about creating premium merchandise that elevates your brand and creates lasting connections with your audience.</p>
+                <p>We're passionate about creating premium merch that elevates your brand and creates lasting connections with your audience.</p>
             </div>
         </section>
 
@@ -46,7 +46,7 @@
             <div class="container">
                 <div class="about-section">
                     <h2>Our Story</h2>
-                    <p>Founded with a vision to revolutionize the merchandise industry, Flagship Merch has been at the forefront of creating premium, custom merchandise for brands across various industries. We believe that merchandise is more than just products – it's a powerful tool for brand storytelling and audience engagement.</p>
+                    <p>Founded with a vision to revolutionize the merch industry, Flagship Merch has been at the forefront of creating premium, custom merch for brands across various industries. We believe that merch is more than just products – it's a powerful tool for brand storytelling and audience engagement.</p>
                     <p>Our commitment to quality, innovation, and customer satisfaction has made us a trusted partner for businesses looking to make a lasting impression through exceptional merchandise.</p>
                 </div>
 
@@ -161,7 +161,7 @@
                     <a href="index.html" style="text-decoration: none; color: inherit;">
                         <h3>FLAGSHIP MERCH</h3>
                     </a>
-                    <p>Premium merchandise for modern brands.</p>
+                    <p>Premium merch for modern brands.</p>
                 </div>
                 <div class="footer-section">
                     <h4>Quick Links</h4>
