--- a/contact.html
+++ b/contact.html
@@ -123,7 +123,7 @@
                     <a href="index.html" style="text-decoration: none; color: inherit;">
                         <h3>FLAGSHIP MERCH</h3>
                     </a>
-                    <p>Premium merchandise for modern brands.</p>
+                    <p>Premium merch for modern brands.</p>
                 </div>
                 <div class="footer-section">
                     <h4>Quick Links</h4>
