--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flagship Merch - Premium Merchandise</title>
+    <title>Flagship Merch - Premium Merch</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
@@ -37,8 +37,8 @@
     <main>
         <section class="hero">
             <div class="hero-content">
-                <h1 class="hero-title">Premium Merchandise<br>for Modern Brands</h1>
-                <p class="hero-subtitle">Elevate your brand with high-quality merchandise that makes a lasting impression.</p>
+                <h1 class="hero-title">Premium Merch<br>for Modern Brands</h1>
+                <p class="hero-subtitle">Elevate your brand with high-quality merch that makes a lasting impression.</p>
                 <div class="hero-buttons">
                     <a href="about.html" class="btn btn-primary">Learn More</a>
                     <a href="contact.html" class="btn btn-secondary">Get Started</a>
@@ -98,7 +98,7 @@
                     <a href="index.html" style="text-decoration: none; color: inherit;">
                         <h3>FLAGSHIP MERCH</h3>
                     </a>
-                    <p>Premium merchandise for modern brands.</p>
+                    <p>Premium merch for modern brands.</p>
                 </div>
                 <div class="footer-section">
                     <h4>Quick Links</h4>
